<resources>
    <string name="client_id">658431378721-0jhn3oaem2nnf0k2h871k65ns1r9tiv1.apps.googleusercontent.com</string>
    <string name="secret_id">Dy-uviiC6etQVfgF9N6beyPp</string>
    <string name="google_android_key">AIzaSyAYR8NFqc1mIbM832Rj5sz_F_g1-NZV8pM</string>
    <string name="google_server_key">AIzaSyCCm_dEtdfR12jlhi6REsenrgKwjLKS_iQ</string>
    <string name="app_name">Around U</string>
    <string name="facebook_app_id">251812285515179</string>
    <string name="connection_error">Connection error, please check your connection and try again</string>
    <string name="server_error">Something went wrong, please try again later</string>
    <string name="no_data_error">No data</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="register_or_login">Register to app via </string>
    <string name="login_mobile">Login via mobile number</string>
    <string name="login_facebook">Login via Facebook</string>
    <string name="login_google">Login via Google</string>
    <string name="agree_message">By using the app you agree to</string>
    <string name="terms_conditions"><u>Terms &amp; Conditions</u></string>
    <string name="skip_login"><u>Skip Login</u></string>
    <string name="register_mobile">Register via Mobile</string>
    <string name="phone_number">Mobile number</string>
    <string name="verify">Verify</string>
    <string name="empty_phone_error">Please enter your mobile number</string>
    <string name="invalid_phone_number">please enter a valid mobile number</string>
    <string name="success_send_code">verification code is sent successfully</string>
    <string name="change_phone">Change Mobile Number</string>
    <string name="verify_mobile">Verify Mobile\nNumber</string>
    <string name="four_digits_code">Please enter activation code</string>
    <string name="code_hint">0000</string>
    <string name="submit">Submit</string>
    <string name="resend_code"><u>Resend code</u></string>
    <string name="invalid_verification_code">Invalid code, Please enter the correct code</string>
    <string name="terms_conditions_title">Terms &amp; Conditions</string>
    <string name="copy_right">All Copyrights reserved @ Around U</string>
    <string name="version">Version</string>
    <string name="become_driver">How to become\na Driver</string>
    <string name="submit_request">Submit Request</string>
    <string name="notifications">Notifications</string>
    <string name="my_orders">Orders</string>
    <string name="stores">Stores</string>
    <string name="my_account">Account</string>
    <string name="settings">Settings</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="arabic">العربية</string>
    <string name="how_to_use">How to use</string>
    <string name="contact_us">Contact Us</string>
    <string name="about_us">About Us</string>
    <string name="return_policy">Privacy Policy</string>
    <string name="rate_app">Rate The App</string>
    <string name="share_app">Share the App</string>
    <string name="my_account_title">My Account</string>
    <string name="my_wallet">My Wallet</string>
    <string name="car_details">Vehicle Details</string>
    <string name="my_addresses">My Addresses</string>
    <string name="my_complaints">My Complaints</string>
    <string name="my_reviews">My Reviews</string>
    <string name="logout">Logout</string>
    <string name="become">how to become a</string>
    <string name="delegate">Delegate</string>
    <string name="delegate_logo">Delegate</string>
    <string name="has_request_error">You have already submit your request, we will contact you soon</string>
    <string name="rating">Rating</string>
    <string name="delivery_rating">Delivery Rating</string>
    <string name="account_details">Account Details</string>
    <string name="load_image"><u>upload profile image</u></string>
    <string name="full_name">Full name</string>
    <string name="phone_no">phone no.</string>
    <string name="birth_date">Birth date</string>
    <string name="gender">Gender</string>
    <string name="city">City</string>
    <string name="update">Edit</string>
    <string name="submit_profile">Sing in</string>
    <string name="empty_name_error">please enter your full name</string>
    <string name="wallet">My Wallet</string>
    <string name="invalid_name_error">full name allows letters and numbers only (i.e. a-z, A-Z, 0-9)</string>
    <string name="become_delegate">Become a Delegate</string>
    <string name="personal_info">Personal info</string>
    <string name="car_brand">ex. brand, model, year</string>
    <string name="id_number">ID Number</string>
    <string name="upload_license">uploaded driver license image</string>
    <string name="upload_id">uploaded national ID image</string>
    <string name="upload_car_front">uploaded car front image</string>
    <string name="upload_car_back">uploaded car back image</string>
    <string name="request_submitted_successfully">your request is submitted, we will contact you soon</string>
    <string name="license_image">driver license</string>
    <string name="id_image">national ID</string>
    <string name="car_front_image">Vehicle front image</string>
    <string name="car_back_image">Vehicle back image</string>
    <string name="my_addresses_title">My Addresses List</string>
    <string name="add_address">Add Address</string>
    <string name="delete_address_message">This address will be remove from your addresses list, Are you sure?</string>
    <string name="select_from_addresses">Select From My Addresses List</string>
    <string name="address_name">Address name</string>
    <string name="save_address">Add Address</string>
    <string name="empty_address_error">please enter Address Name</string>
    <string name="search_location">Choose location</string>
    <string name="add_address_move_note">release to set the address</string>
    <string name="add_address_release_note">it will be saved in the address list</string>
    <string name="search_name">Search by store name</string>
    <string name="contact_info">Contact info</string>
    <string name="follow">Follow us on</string>
    <string name="skip">Skip</string>
    <string name="request_pick_location">Request From pickup location</string>
    <string name="no_connection_title">No Connection</string>
    <string name="no_connection_message">Check your network and reload page</string>
    <string name="reload_page">Reload page</string>
    <string name="search">Search</string>
    <string name="near_by">Nearby</string>
    <string name="more_near_stores">More</string>
    <string name="open_now">Open Now</string>
    <string name="closed">Closed</string>
    <string name="kilometer">Km</string>
    <string name="meter">M</string>
    <string name="show_all">Show All</string>
    <string name="all_active_stores">Active Stores</string>
    <string name="no_active_stores">No Active stores now</string>
    <string name="all_nearest_stores">All Stores Nearby</string>
    <string name="all_stores">All Stores</string>
    <string name="no_stores">No stores</string>
    <string name="working_houres">Working hours</string>
    <string name="request_from_store">Request from Store</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="destination">Delivery location</string>
    <string name="what_you_need">What do you need?</string>
    <string name="what_you_need_hint">Write your order details </string>
    <string name="what_you_need_error">The order description value is too long. It should have 255 characters or less</string>
    <string name="voice_record">Voice Record</string>
    <string name="upload_image">Upload image</string>
    <string name="max_no_images">Upload up to 10 images</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="order_submitted_successfully">Your order is submitted successfully</string>
    <string name="zero_time">00:00</string>
    <string name="prayer_time_note">note; if you are ordering during prayer time we are sorry to inform you that your order will take an extra 30 min</string>
    <string name="cancel_msg">Are you sure you want to withdraw your delivery offer?</string>
    <string name="blocked_area_error">Sorry, we don\'t operate in this area</string>
    <string name="submit_order">Submit Order</string>
    <string name="delivery_dutation">Delivery Duration</string>
    <string name="add_coupon">Add Coupon</string>
    <string name="coupon_code">Add Coupon Code</string>
    <string name="enter_code">Enter Code</string>
    <string name="empty_coupon_error">Enter coupon code</string>
    <string name="where_to">Where to</string>
    <string name="confirm_destination">confirm delivery location</string>
    <string name="pickup_point">Pickup location</string>
    <string name="confirm_pickup">Confirm pickup location</string>
    <string name="pickup_from">Pickup From</string>
    <string name="pickup_move_note">release to set pickup location</string>
    <string name="pickup_release_note">will pickup from here</string>
    <string name="delivery_move_note">release to set delivery destination</string>
    <string name="delivery_release_note">Delivery Location</string>
    <string name="my_order">My order</string>
    <string name="order">Order</string>
    <string name="order_items">My order details</string>
    <string name="waiting_drivers">Waiting for offers</string>
    <string name="offers">Offers</string>
    <string name="accept">Accept</string>
    <string name="reject_offer">Reject</string>
    <string name="days">Days</string>
    <string name="day">Day</string>
    <string name="new_order">New Order</string>
    <string name="are_you_ready">Are you ready to deliver?</string>
    <string name="total">Total</string>
    <string name="cancel_offer">Cancel Offer</string>
    <string name="accept_offer_message">You are accepting the order to be delivered with</string>
    <string name="reject_offer_message">you are going to overlook this offer, note you won\'t be able to undo this?</string>
    <string name="question_mark">\?</string>
    <string name="no_available_drivers">No Delegates available...</string>
    <string name="no_delegate_offers">We notified a number of delegates but no offers received</string>
    <string name="no_more_delegates">we found no more delegates around you</string>
    <string name="search_again"><u>SEARCH AGAIN</u></string>
    <string name="cancel_order_msg">Are you sure you want to cancel this order?</string>
    <string name="cancel_order">Cancel Order</string>
    <string name="choose_reason">Select cancellation reason</string>
    <string name="cancelation_reasons">Cancellation Reason:</string>
    <string name="submit_complain">Submit Complaint</string>
    <string name="cancel_delegate_order">Are you sure you want to withdraw from this ride?</string>
    <string name="cancel_delegate_order_reason">Enter cancellation reason</string>
    <string name="cancel_delegate_order_reason_error">Please enter cancellation reason</string>
    <string name="add_rate"><u>Add Rate</u></string>
    <string name="reorder">Reorder</string>
    <string name="changes">Changes</string>
    <string name="dialoug_reordere_msg">you are going to recreate this order with same details</string>
    <string name="free_commission_message">Congrats! you\'re granted a Free Commission ride</string>
    <string name="free">Free</string>
    <string name="add_offer">Set offer</string>
    <string name="shipping_cost">Delivery cost</string>
    <string name="sar">sar</string>
    <string name="commission">Commission</string>
    <string name="vat">VAT</string>
    <string name="ready">submit offer</string>
    <string name="reject">Cancel</string>
    <string name="dashes">-</string>
    <string name="profit">Total earnings</string>
</resources>