<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:visibility="gone"
    android:id="@+id/ll_no_connection">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/no_connection"/>

    <TextView
        android:id="@+id/tv_no_connection_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_connection_title"
        android:textColor="@color/app_color"
        android:textSize="24sp"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/tv_no_connection_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_connection_message"
        android:textColor="@color/gray"
        android:textSize="15sp"
        android:textAlignment="center"
        android:layout_margin="20sp"/>

    <Button
        android:id="@+id/btn_reload_page"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/red_corners"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="30dp"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:text="@string/reload_page"
        android:textAllCaps="false"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"/>

</LinearLayout>