<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_color">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/ll_main_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iv_logo"
                    android:layout_width="130dp"
                    android:layout_height="76dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginBottom="40dp"
                    android:contentDescription="@null"
                    android:src="@drawable/logo_red" />

                <TextView
                    android:id="@+id/tv_register_or_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:text="@string/register_or_login"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/btn_login_mobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/white_corners"
                    android:drawableStart="@drawable/phone"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:text="@string/login_mobile"
                    android:textAllCaps="false"
                    android:textColor="@color/gray"
                    android:textSize="15sp" />

                <Button
                    android:id="@+id/btn_login_facebook"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/white_corners"
                    android:drawableStart="@drawable/facebook"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:text="@string/login_facebook"
                    android:textAllCaps="false"
                    android:textColor="@color/facebook_blue"
                    android:textSize="15sp"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/btn_login_google"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="25dp"
                    android:background="@drawable/white_corners"
                    android:drawableStart="@drawable/google"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:text="@string/login_google"
                    android:textAllCaps="false"
                    android:textColor="@color/google_red"
                    android:textSize="15sp"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/tv_agree"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="@string/agree_message"
                    android:textColor="@color/white"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/tv_terms_conditions"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:text="@string/terms_conditions"
                    android:textColor="@color/light_green"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/tv_skip_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:text="@string/skip_login"
                    android:textColor="@color/white"
                    android:textSize="13sp" />


            </LinearLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/ll_main_content"
                android:layout_alignParentBottom="true">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:background="@drawable/map_shape"
                    android:contentDescription="@null" />

            </FrameLayout>

        </RelativeLayout>
    </ScrollView>

    <com.rey.material.widget.ProgressView
        android:id="@+id/pv_load"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_centerInParent="true"
        android:visibility="gone"
        app:pv_autostart="true"
        app:pv_circular="true"
        app:pv_progressMode="indeterminate"
        app:pv_progressStyle="@style/ColoredCircularProgressDrawable" />

</RelativeLayout>