<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent_popup"
    android:gravity="center"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:id="@+id/ll_add_offer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <LinearLayout
                android:id="@+id/ll_popup_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/black_corners"
                android:orientation="vertical"
                android:padding="20dp">

                <TextView
                    android:id="@+id/tv_add_offer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/add_offer"
                    android:textColor="@color/app_color"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tv_shipping_cost"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/shipping_cost"
                    android:textColor="@color/line_gray"
                    android:textSize="13sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/et_shipping_cost"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/white_corners"
                        android:inputType="numberDecimal"
                        android:padding="5dp"
                        android:textColor="@color/title_black"
                        android:textSize="13sp" />

                    <TextView
                        android:id="@+id/tv_currency"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:gravity="center|end"
                        android:text="@string/sar"
                        android:textColor="@color/app_color"
                        android:textSize="13sp" />

                </LinearLayout>


                <TextView
                    android:id="@+id/tv_invalid_shipping_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:textColor="@color/app_color"
                    android:textSize="12sp"
                    android:visibility="gone" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_commission_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/commission"
                        android:textColor="@color/line_gray"
                        android:textSize="13sp" />

                    <TextView
                        android:id="@+id/tv_commission_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:textColor="@color/white"
                        android:textSize="13sp" />

                </LinearLayout>

                <TextView
                    android:id="@+id/tv_free_commission"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/light_green_corners"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:textColor="@color/green"
                    android:textSize="12sp"
                    android:text="@string/free_commission_message"
                    android:gravity="center"
                    android:layout_marginTop="5dp"
                    android:visibility="gone"
                    android:layout_gravity="center_horizontal"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal"
                    android:visibility="gone">

                    <TextView
                        android:id="@+id/tv_vat_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/vat"
                        android:textColor="@color/line_gray"
                        android:textSize="13sp" />

                    <TextView
                        android:id="@+id/tv_vat_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:textColor="@color/white"
                        android:textSize="13sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_profit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal"
                    android:visibility="gone">

                    <TextView
                        android:id="@+id/tv_profit_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/profit"
                        android:textColor="@color/line_gray"
                        android:textSize="13sp" />

                    <TextView
                        android:id="@+id/tv_profit_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/dashes"
                        android:textColor="@color/white"
                        android:textSize="13sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_reject"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:background="@drawable/grey_corners"
                        android:padding="10dp"
                        android:text="@string/reject"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="13sp" />

                    <TextView
                        android:id="@+id/tv_ready"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/red_corners"
                        android:padding="10dp"
                        android:text="@string/ready"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="13sp" />

                </LinearLayout>


            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <com.rey.material.widget.ProgressView
        android:id="@+id/pv_load"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_centerInParent="true"
        android:visibility="gone"
        app:pv_autostart="true"
        app:pv_circular="true"
        app:pv_progressMode="indeterminate"
        app:pv_progressStyle="@style/ColoredCircularProgressDrawable" />

</RelativeLayout>